@startuml
skinparam classAttributeIconSize 0
skinparam shadowing false
title Class Diagram - Login and Auth

class "LoginServlet" as LoginServlet_0 {
  +doGet()
  +doPost()
  +forwardLogin()
}

class "UserService" as UserService_1 {
  +login()
  +getUserByUsername()
}

class "UserDao" as UserDao_2 {
  +login()
  +getUserByUsername()
}

class "PasswordUtil" as PasswordUtil_3 {
  +sha256()
}

class "TemporaryRoleAccessService" as TemporaryRoleAccessService_4 {
  +synchronizeSessionRole()
}

class "AuthorizationFilter" as AuthorizationFilter_5 {
  +doFilter()
  +checkRoleAccess()
}

LoginServlet_0 --> UserService_1 : authenticate credentials
UserService_1 --> PasswordUtil_3 : hash password
UserService_1 --> UserDao_2 : query user record
LoginServlet_0 --> TemporaryRoleAccessService_4 : sync session role
AuthorizationFilter_5 --> TemporaryRoleAccessService_4 : resolve effective role
AuthorizationFilter_5 --> UserDao_2 : validate active account
@enduml
